--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -172,13 +172,21 @@ rule make_msa:
     shell:
         "augur align --sequences {input} --reference-sequence {config[reference_genome]} --output {output} --fill-gaps"
 
-rule make_tree:
+rule make_tree_raw:
     input:
         "qc_analysis/aligned.fasta"
     output:
         "qc_analysis/tree_raw.nwk"
     shell:
         "augur tree --alignment {input} --output {output}"
+
+rule make_tree_final:
+    input:
+        "qc_analysis/tree_raw.nwk"
+    output:
+        "qc_analysis/tree.nwk"
+    shell:
+        "nw_reroot {input} `head -1 {config[reference_genome]} | tr -d \">\"` > {output}"
 
 rule make_alleles:
     input:
@@ -257,7 +265,7 @@ rule make_qc_genome_completeness_by_ct:
 
 rule make_qc_tree_snps:
     input:
-        tree="qc_analysis/tree_raw.nwk",
+        tree="qc_analysis/tree.nwk",
         alleles="qc_analysis/alleles.tsv"
     output:
         "qc_analysis/tree_snps.pdf"
