--- a/environment.yml
+++ b/environment.yml
@@ -9,9 +9,16 @@ dependencies:
   - augur
   - pysam
   - r
+  - iqtree<2
   - bioconductor-ggtree
   - r-patchwork
   - r-ggforce
   - bedtools
   - samtools
   - newick_utils
+  - pip=19.3.1
+  - pip:
+      - pandas==1.0.1
+      - dendropy>=4.4.0
+      - git+https://github.com/hCoV-2019/lineages.git
+      - git+https://github.com/hCoV-2019/pangolin.git
