--- a/environment.yml
+++ b/environment.yml
@@ -8,17 +8,16 @@ dependencies:
   - mafft
   - augur
   - pysam
-  - r
+  - r-base=3.6.1
   - iqtree<2
-  - bioconductor-ggtree
-  - r-patchwork
-  - r-ggforce
+  - bioconductor-ggtree=2.0.0
+  - r-patchwork=1.0.0
+  - r-ggforce=0.3.1
   - bedtools
   - samtools
   - newick_utils
   - pip=19.3.1
   - pip:
-      - pandas==1.0.1
       - dendropy>=4.4.0
       - git+https://github.com/hCoV-2019/lineages.git
       - git+https://github.com/hCoV-2019/pangolin.git
