--- a/environment.yml
+++ b/environment.yml
@@ -21,3 +21,4 @@ dependencies:
       - dendropy>=4.4.0
       - git+https://github.com/hCoV-2019/lineages.git
       - git+https://github.com/hCoV-2019/pangolin.git
+      - git+https://github.com/rdeborja/ncov_parser.git
