--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -61,9 +61,10 @@ def get_tree_consensus_sequences(wildcards):
     return consensus_sequences
 
 def get_tree_plot_input(wildcards):
-    input_list = ["qc_analysis/tree.nwk", "qc_analysis/alleles.tsv"]
+
+    input_list = ["qc_analysis/{prefix}_tree.nwk", "qc_analysis/{prefix}_alleles.tsv"]
     if "assign_lineages" in config and config["assign_lineages"]:
-        input_list.append("lineage_report.csv")
+        input_list.append("qc_analysis/{prefix}_lineage_report.csv")
     return input_list
 
 def get_qc_sequencing_plots(wildcards):
@@ -177,7 +178,7 @@ rule make_merged_consensus:
     input:
         get_tree_consensus_sequences
     output:
-        "qc_analysis/consensus.fasta"
+        "qc_analysis/{prefix}_consensus.fasta"
     params:
         rename_script = srcdir("../tree/preprocess_consensus.py")
     shell:
@@ -185,33 +186,33 @@ rule make_merged_consensus:
 
 rule make_msa:
     input:
-        "qc_analysis/consensus.fasta"
+        "qc_analysis/{prefix}_consensus.fasta"
     output:
-        "qc_analysis/aligned.fasta"
+        "qc_analysis/{prefix}_aligned.fasta"
     shell:
         "augur align --sequences {input} --reference-sequence {config[reference_genome]} --output {output} --fill-gaps"
 
 rule make_tree_raw:
     input:
-        "qc_analysis/aligned.fasta"
+        "qc_analysis/{prefix}_aligned.fasta"
     output:
-        "qc_analysis/tree_raw.nwk"
+        "qc_analysis/{prefix}_tree_raw.nwk"
     shell:
         "augur tree --alignment {input} --output {output}"
 
 rule make_tree_final:
     input:
-        "qc_analysis/tree_raw.nwk"
+        "qc_analysis/{prefix}_tree_raw.nwk"
     output:
-        "qc_analysis/tree.nwk"
+        "qc_analysis/{prefix}_tree.nwk"
     shell:
         "nw_reroot {input} `head -1 {config[reference_genome]} | tr -d \">\"` > {output}"
 
 rule make_alleles:
     input:
-        "qc_analysis/aligned.fasta"
+        "qc_analysis/{prefix}_aligned.fasta"
     output:
-        "qc_analysis/alleles.tsv"
+        "qc_analysis/{prefix}_alleles.tsv"
     params:
         alleles_script = srcdir("../tree/align2alleles.py")
     shell:
@@ -219,12 +220,12 @@ rule make_alleles:
 
 rule make_lineage_assignments:
     input:
-        "qc_analysis/consensus.fasta"
+        "qc_analysis/{prefix}_consensus.fasta"
     output:
-        "lineage_report.csv"
+        "qc_analysis/{prefix}_lineage_report.csv"
     threads: workflow.cores
     shell:
-        "pangolin -t {threads} {input}"
+        "pangolin -t {threads} --outfile {output} {input}"
 #
 # QC plots
 #
@@ -288,4 +289,4 @@ rule make_qc_tree_snps:
     params:
         plot_script = srcdir("../tree/plot_tree_snps.R")
     shell:
-        "Rscript {params.plot_script} qc_analysis {wildcards.prefix}"
+        "Rscript {params.plot_script} {output} {input}"
