--- a/environment.yml
+++ b/environment.yml
@@ -17,6 +17,7 @@ dependencies:
   - samtools
   - newick_utils
   - pip=19.3.1
+  - biopython
   - pip:
       - dendropy>=4.4.0
       - git+https://github.com/hCoV-2019/lineages.git
