--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -363,3 +363,22 @@ rule make_negative_control_report:
         script=srcdir("negative_control_check.py")
     shell:
         "python {params.script} {input} > {output}"
+
+rule make_fpileups_fofn:
+    input:
+        expand("qc_sequencing/{s}.fpileup.tsv", s=get_sample_names())
+    output:
+        "qc_sequence/{prefix}_fpileups.fofn",
+    shell:
+        'echo {input} | tr " " "\\n" > {output}'
+
+rule make_mixture_report:
+    input:
+        fpileups="qc_sequence/{prefix}_fpileups.fofn",
+        alleles="qc_analysis/{prefix}_alleles.tsv"
+    output:
+        "qc_analysis/{prefix}_mixture_report.tsv"
+    params:
+        script=srcdir("mixture_check.py")
+    shell:
+        "python {params.script} --fpileup {input.fpileups} --alleles {input.alleles} > {output}"
