--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -69,7 +69,7 @@ def get_qc_for_sample(wildcards):
 
 def get_consensus_for_sample(wildcards):
     consensus_pattern = get_consensus_pattern()
-    return consensus_pattern(data_root=config["data_root"], sample=wildcards.sample)
+    return consensus_pattern.format(data_root=config["data_root"], sample=wildcards.sample)
 
 def get_tree_consensus_sequences(wildcards):
     pattern = get_consensus_pattern()
