--- a/environment.yml
+++ b/environment.yml
@@ -18,9 +18,13 @@ dependencies:
   - samtools
   - newick_utils
   - pip=19.3.1
+  - minimap2
+  - numpy=1.19.1
   - biopython
   - pip:
       - dendropy>=4.4.0
       - git+https://github.com/hCoV-2019/lineages.git
       - git+https://github.com/hCoV-2019/pangolin.git
       - git+https://github.com/rdeborja/ncov_parser.git
+      - git+https://github.com/cov-lineages/pangoLEARN.git
+      - git+https://github.com/cov-ert/datafunk.git
