--- a/environment.yml
+++ b/environment.yml
@@ -23,6 +23,7 @@ dependencies:
   - biopython
   - pip:
       - dendropy>=4.4.0
+      - pyvcf
       - git+https://github.com/hCoV-2019/lineages.git
       - git+https://github.com/hCoV-2019/pangolin.git
       - git+https://github.com/rdeborja/ncov_parser.git
