--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -15,7 +15,7 @@ def get_consensus_pattern():
     elif config['platform'] == 'oxford-nanopore':
         return config.get("consensus_pattern", "{data_root}/{sample}.consensus.fasta")
 
-def get_variant_pattern():
+def get_variants_pattern():
     if config['platform'] == 'illumina':
         return config.get("variants_pattern", "{data_root}/{sample}.variants.tsv")
     elif config['platform'] == 'oxford-nanopore':
