--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -49,6 +49,17 @@ def get_negative_control_samples():
     else:
         return ""
 
+# negative controls may not have bams so we need to filter
+# out those that don't have alignments
+def get_negative_control_bed(wildcards):
+    bp = get_bam_pattern()
+    out = list()
+    for s in get_negative_control_samples():
+        bam = bp.format(data_root=config["data_root"], sample=s)
+        if os.path.exists(bam):
+            out.append("qc_sequencing/{sample}.per_base_coverage.bed".format(sample=s))
+    return out
+
 def get_bam_for_sample(wildcards):
     bam_pattern = get_bam_pattern()
     return bam_pattern.format(data_root=config["data_root"], sample=wildcards.sample)
@@ -136,6 +147,10 @@ def get_run_alleles(wildcards):
     rn = get_run_name()
     return "qc_analysis/%s_alleles.tsv" % (rn)
 
+def get_negative_control_report(wildcards):
+    rn = get_run_name()
+    return "qc_sequencing/%s_negative_control_report.tsv" % (rn)
+
 #
 # top-level rules
 #
@@ -154,6 +169,10 @@ rule all_qc_analysis_plots:
 rule all_qc_summary:
     input:
         get_qc_summary
+
+rule all_qc_negative_control:
+    input:
+        get_negative_control_report
 
 #
 # generate coverage QC data using bedtools
@@ -390,13 +409,13 @@ rule make_full_qc_summary:
 
 rule make_negative_control_report:
     input:
-        expand("qc_sequencing/{s}.per_base_coverage.bed", s=get_negative_control_samples())
+        bed=get_negative_control_bed
     output:
         "qc_sequencing/{prefix}_negative_control_report.tsv"
     params:
         script=srcdir("negative_control_check.py")
     shell:
-        "python {params.script} {input} > {output}"
+        "python {params.script} {input.bed} > {output}"
 
 rule make_fpileups_fofn:
     input:
@@ -416,3 +435,13 @@ rule make_mixture_report:
         script=srcdir("mixture_check.py")
     shell:
         "python {params.script} --fpileup {input.fpileups} --alleles {input.alleles} > {output}"
+
+rule make_ambiguous_position_report:
+    input:
+        alleles="qc_analysis/{prefix}_alleles.tsv"
+    output:
+        "qc_analysis/{prefix}_ambiguous_position_report.tsv"
+    params:
+        script=srcdir("ambiguous_position_check.py")
+    shell:
+        "python {params.script} --alleles {input.alleles} --min-count 3 > {output}"
