--- a/qc/Snakefile
+++ b/qc/Snakefile
@@ -55,7 +55,7 @@ def get_negative_control_samples():
     if "negative_control_samples" in config:
         return config["negative_control_samples"]
     else:
-        return ""
+        return []
 
 # negative controls may not have bams so we need to filter
 # out those that don't have alignments
@@ -170,6 +170,17 @@ def get_ambiguous_report(wildcards):
     rn = get_run_name()
     return "qc_reports/%s_ambiguous_position_report.tsv" % (rn)
 
+def get_qc_reports(wildcards):
+    out = [ get_qc_summary(wildcards),
+            get_mixture_report(wildcards),
+            get_ambiguous_report(wildcards)
+          ]
+
+    # only try to make negative control report if NC samples have been defined
+    if len(get_negative_control_samples()) > 0:
+        out.append(get_negative_control_report(wildcards))
+    return out
+
 #
 # top-level rules
 #
@@ -203,7 +214,7 @@ rule all_ambiguous_report:
 
 rule all_qc_reports:
     input:
-        get_qc_summary, get_negative_control_report, get_mixture_report, get_ambiguous_report
+        get_qc_reports
 
 #
 # generate coverage QC data using bedtools
